# SkyRenderer

./: .gitignore  CMakeLists.txt
data/shader/cloud/: cloud.frag  cloud.frag.spv  cloud.vert  cloud.vert.spv  cloud_post.frag  cloud_post.frag.spv  cloud_post.vert
data/shader/compute/: worley3d.comp  worley3d.comp.spv
data/shader/draw_tex2D/: draw_tex2D.frag  draw_tex2D.frag.spv
data/shader/include/: ap_renderer.h  cam_set.h  cubemap.glsl  env_set.h  functions.glsl  post_process.h  renderpass.h  sum.h  (+1 more)
doc/cloud/: SkyRenderer.tex  abstract.tex  content-cloud.tex  refs.bib  teaser.tex
doc/combined/: abstract.tex  appendix.tex  config.tex  content-cloud.tex  content-intro.tex  content-sky.tex  macros.tex  refs.bib  report.tex  teaser.tex
doc/sky/: config.tex  content.tex  refs.bib  report.tex  teaser.tex
doc/sky_beamer/: presentation.tex
shared_include/: aerial_perspective.h  ground_lighting.h  scattering.h  sky.h  transmittance.h
src/: AerialPerspective.cpp  AerialPerspectiveRenderer.cpp  Atmosphere.cpp  Buffer.cpp  Camera.cpp  CloudData.cpp  CloudRenderer.cpp  CommandPool.cpp  CommandRecorder.cpp  ComputePipeline.cpp  EnvConditions.cpp  GroundLighting.cpp  ImGuiRenderer.cpp  Input.cpp  Log.cpp  Material.cpp  Mesh.cpp  Model.cpp  NoiseGenerator.cpp  PostprocessingSubpass.cpp  Precomputer.cpp  ReadFile.cpp  ReadFileBinary.cpp  Shader.cpp  SimpleModelRenderer.cpp  SkyRenderer.cpp  SubpassRenderer.cpp  Sun.cpp  Swapchain.cpp  Terrain.cpp  TestRenderer.cpp  Texture2D.cpp  Texture3D.cpp  Time.cpp  Vertex.cpp  VulkanAPI.cpp  Wind.cpp  Window.cpp  main.cpp
(+81 files in other folders)
